--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -46,7 +46,7 @@ name: 'Terraform'
 
 on:
   push:
-    branches: ['main/terraform']
+    branches: ['main']
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
