--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,11 +76,11 @@ jobs:
 
       # Checks that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
-        run: cd terraform && terraform fmt -check
+        run: terraform fmt -check
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
-        run: cd terraform && terraform plan -input=false
+        run: terraform plan -input=false
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
